--- a/src/styles/components/citysearch.scss
+++ b/src/styles/components/citysearch.scss
@@ -2,9 +2,7 @@
     display: flex;
     align-items: center;
     padding: 0 .6rem;
-    position: absolute;
     width: 100%;
-    top:1.6rem;
     .search{
         flex: 1;
         display: flex;
@@ -31,6 +29,9 @@
                 border: 0;
                 padding-left: .3rem;
                 font-size: .8rem;
+            }
+            .icon-susong-search:before{
+                font-size: 1rem;
             }
         }
     }
