--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,5 +1,5 @@
 @import-normalize;
-
+@import "./index.scss";
 
 *{
     margin: 0;
@@ -20,4 +20,7 @@ body{
 a{
     text-decoration: none;
     color: inherit;
+}
+h1,h2,h3,h4,h5,h6{
+    color: #000;
 }
