--- a/src/pages/citySelect/index.scss
+++ b/src/pages/citySelect/index.scss
@@ -1,19 +1,44 @@
-
-.citylist{
-    padding: 10px;
-    background-color: #fff;
-    .city{
-        padding: 10px 0;
-        .title{
-            font-size: 14px;
-            color: #999;
+.cityselect {
+    .citylist{
+        position: relative;
+        padding: 10px;
+        background-color: #fff;
+        height: calc(100vh - 45px);
+        overflow: hidden;
+        .city{
+            padding: 10px 0;
+            .title{
+                font-size: 14px;
+                color: #999;
+            }
+            .name{
+                font-size: 16px;
+                height: 50px;
+                line-height: 50px;
+                padding: 0 5px;
+                border-bottom: 1px solid #eee;
+            }
         }
-        .name{
-            font-size: 16px;
-            height: 50px;
-            line-height: 50px;
-            padding: 0 5px;
-            border-bottom: 1px solid #eee;
+        .letter{
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: calc(100vh - 45px);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            padding-right:5px;
+            &-view{
+                border-radius: 50%;
+                text-align: center;
+                padding: 3px;
+                span{
+
+                }
+            }
+            .activeIndex{
+                background-color: aqua;
+            }
         }
     }
 }
