--- a/src/pages/mapFound/mapFound.module.scss
+++ b/src/pages/mapFound/mapFound.module.scss
@@ -24,4 +24,77 @@
             cursor: pointer;
         }
     }
+    .house_list{
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        height: 0px;
+        transition: all .5s;
+        background-color: #59ffc6;
+        .house_title{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 40px;
+            padding: 0 10px;
+            h3{
+
+            }
+            span{
+
+            }
+        }
+        .list_content{
+            padding: 0 10px 40px;
+            background-color: #fff;
+            overflow-y: auto;
+            height: 100%;
+            .item_content{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-bottom: 1px solid #eee;
+                padding: 10px 0;
+                .list_img{
+                    flex: 1;
+                    display:flex;
+                    img{
+
+                    }
+                }
+                .item_house{
+                    flex: 2;
+                    font-size: 15px;
+                    padding-left: 10px;
+                    line-height: 20px;
+                    overflow: hidden;
+                    .house_name{
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        color: #000;
+                        font-weight: 600;
+                    }
+                    .house_desc{
+                        font-size: 12px;
+                        color: #999;
+                    }
+                    .tags {
+                        font-size: 12px;
+                        background-color: #59ffc6;
+                        border: 1px solid #59ffc6;
+                        color: #fff;
+                        margin-left: 2px;
+                    }
+                    .price{
+                        color: red;
+                        span{
+                            font-size: 16px;
+                            font-weight: 700;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
