--- a/src/pages/found/found.module.scss
+++ b/src/pages/found/found.module.scss
@@ -97,6 +97,10 @@
                         border-radius: 3px;
                         margin: 0 15px 15px 0;
                     }
+                    .tag_active{
+                        border: 1px solid #00e064;
+                        color: #00e064;
+                    }
                 }
             }
         }
